# markrel

./: .gitignore  CONTRIBUTING.md  LAUNCH_ANNOUNCEMENTS.md  LICENSE  PROMOTION_PLAN.md  README.md  RELEASE.md  SOCIAL_MEDIA_GUIDE.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html  inference.md  performance.md  style.css  training.md
experiments/: bayesian_optimization_precision_results.json  bayesian_optimization_precision_study.pkl  bayesian_optimization_recall_results.json  bayesian_optimization_recall_study.pkl  bayesian_optimization_results.json  bayesian_optimization_study.pkl  benchmark.py  benchmark_real_data.py  benchmark_report.md  benchmark_results.json  download_msmarco.py  download_wikiqa.py  realworld_benchmark_report.md  realworld_benchmark_results.json  run_msmarco_benchmark.py  run_wikiqa_1024dim_benchmark.py  run_wikiqa_bayesian_optimization.py  run_wikiqa_bayesian_precision.py  run_wikiqa_bayesian_recall.py  run_wikiqa_benchmark.py  run_wikiqa_better_embeddings.py  run_wikiqa_embedding_comparison.py  run_wikiqa_embeddings_benchmark.py  run_wikiqa_optimized.py  run_wikiqa_ranking_benchmark.py  run_wikiqa_rerank_benchmark.py  wikiqa_1024dim_benchmark_report.md  wikiqa_1024dim_benchmark_results.json  wikiqa_benchmark_report.md  wikiqa_benchmark_results.json  wikiqa_better_embeddings_results.json  wikiqa_embedding_comparison.json  wikiqa_embeddings_benchmark_report.md  wikiqa_embeddings_benchmark_results.json  wikiqa_optimization_results.json  wikiqa_ranking_benchmark_report.md  wikiqa_ranking_benchmark_results.json  wikiqa_rerank_benchmark_report.md  wikiqa_rerank_benchmark_results.json
markrel/: __init__.py  model.py  similarity.py  states.py  transitions.py  vectorizer.py
tests/: __init__.py  test_model.py
